--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,4 +34,13 @@ body,
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+}
+
+.container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
